traduciendo el texto

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nunca</h1>
-    <p>rendirse, crack</p>
+    <h1>Never</h1>
+    <p>Surrender</p>
 
 </body>
 </html>
